Fixed search widget spacing issue

--- a/src/component/SearchSuggestion/SearchSuggestion.style.scss
+++ b/src/component/SearchSuggestion/SearchSuggestion.style.scss
@@ -58,7 +58,6 @@
 
     @include desktop {
       right: 4px;
-
     }
   }
 
@@ -107,17 +106,23 @@
     }
   }
 
-  .TrandingTags,
   .TopSearches,
-  .RecentSearches,
-  .TrandingBrands {
+  .RecentSearches
+  {
+    margin-bottom: 30px;
+
     ul {
       display: flex;
     }
-
     li {
       margin-top: 0;
-      margin-right: 5px;
+      margin-right: 20px;
+      @include mobile {
+        margin-right: 8px;
+      }
+      @include tablet {
+        margin-right: 8px;
+      }
     }
     h2 {
       margin-top: 5px;
@@ -130,7 +135,42 @@
     }
 
     @include desktop() {
-      margin-bottom: 30px;
+
+      ul {
+        flex-wrap: wrap;
+      }
+    }
+  }
+
+  .TrandingTags,
+  .TrandingBrands {
+    margin-bottom: 30px;
+
+    ul {
+      display: flex;
+    }
+
+    li {
+      margin-top: 0;
+      margin-right: 20px;
+      @include mobile {
+        margin-right: 5px;
+      }
+      @include tablet {
+        margin-right: 5px;
+      }
+    }
+    h2 {
+      margin-top: 5px;
+    }
+
+    @include before-desktop() {
+      ul {
+        overflow-x: auto;
+      }
+    }
+
+    @include desktop() {
 
       ul {
         flex-wrap: wrap;
@@ -140,8 +180,9 @@
 
   .TrandingTags,
   .TopSearches,
-  .RecentSearches, .recommendedForYou, .WishlistSliderHeader {
-    margin: 0;
+  .RecentSearches,
+  .recommendedForYou,
+  .WishlistSliderHeader {
     padding: 0 20px;
 
     ul {
@@ -463,27 +504,27 @@
   margin-bottom: 10px;
   .VueProductSlider {
     &-Container {
-    width: 100%;
-    font-size: 16px;
-    margin-top: 0;
-    font-weight: var(--fw-demi);
+      width: 100%;
+      font-size: 16px;
+      margin-top: 0;
+      font-weight: var(--fw-demi);
 
-    @media (max-width: 1024px) {
-      width: 96.005vw;
-      margin: 0;
-    }
-    @media (max-width: 760px) {
-      padding-left: 8px;
-    }
-    @media (max-width: 1024px) and (min-width: 768px) {
-      padding-left: 30px;
-    }
-    .DragWrapper {
-      .Outer {
-        margin: 0 auto 15px auto;
+      @media (max-width: 1024px) {
+        width: 96.005vw;
+        margin: 0;
+      }
+      @media (max-width: 760px) {
+        padding-left: 8px;
+      }
+      @media (max-width: 1024px) and (min-width: 768px) {
+        padding-left: 30px;
+      }
+      .DragWrapper {
+        .Outer {
+          margin: 0 auto 15px auto;
+        }
       }
     }
-  }
     &-VueProductContainer {
       &:nth-last-child(2) {
         margin-right: 7.92px;
@@ -499,7 +540,7 @@
         font-size: 17px;
         text-transform: none;
         margin: 0;
-        letter-spacing: .25px;
+        letter-spacing: 0.25px;
         font-weight: bold;
       }
     }
@@ -513,27 +554,27 @@
       padding-bottom: 0 !important;
     }
     &-Container {
-    width: 100%;
-    font-size: 16px;
-    margin: 15px 0px 0;
-    font-weight: var(--fw-demi);
+      width: 100%;
+      font-size: 16px;
+      margin: 15px 0px 0;
+      font-weight: var(--fw-demi);
 
-    @media (max-width: 1024px) {
-      width: 96.005vw;
-      margin: 0px;
-    }
-    @media (max-width: 760px) {
-      padding-left: 8px;
-    }
-    @media (max-width: 1024px) and (min-width: 768px) {
-      padding-left: 30px;
-    }
-    .DragWrapper {
-      .Outer {
-        margin: 0 auto 15px auto;
+      @media (max-width: 1024px) {
+        width: 96.005vw;
+        margin: 0px;
+      }
+      @media (max-width: 760px) {
+        padding-left: 8px;
+      }
+      @media (max-width: 1024px) and (min-width: 768px) {
+        padding-left: 30px;
+      }
+      .DragWrapper {
+        .Outer {
+          margin: 0 auto 15px auto;
+        }
       }
     }
-  }
     &-VueProductContainer {
       &:nth-last-child(2) {
         margin-right: 7.92px;
@@ -549,7 +590,7 @@
         font-size: 17px;
         text-transform: none;
         margin: 0;
-        letter-spacing: .25px;
+        letter-spacing: 0.25px;
         font-weight: 600;
       }
     }
